db update - d3 scaling, both charts 2

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Data Scientist Badges</title>
+    <title>Data Scientist Quiz</title>
     <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/smoothness/jquery-ui-1.8.23.custom.css') }}">
     <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/style.css') }}">
 
